# magahttpparser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: mgparser.cpp.7A78D818C60F771E.idx  mgparser.cpp.F475223E1358AA9A.idx  mgparser.hpp.33DE71A5FF2852BD.idx  mgparser.hpp.768692D26A9714AA.idx  test.cpp.62935F7D57CD2A04.idx  test.cpp.EC4964A684A61B92.idx
.github/workflows/: cmake.yml
include/: mgparser.hpp  parser.hpp
src/: mgparser.cpp  parser.cpp
test/: test.cpp
